<resources>
    <string name="app_name">POS-Android</string>
    <string name="fragment_home">HomeFragment</string>
    <string name="fragment_pay">PayFragment</string>
    <string name="fragment_bill">BillFragment</string>
    <string name="fragment_preorder">PreorderFragment</string>
    <string name="fragment_stock">StockFragment</string>
    <string name="fragment_recipe">RecipeFragment</string>
    <string name="fragment_sale">SaleFragment</string>
    <string name="fragment_setting">SettingFragment</string>
    <string name="fragment_worker">WorkerFragment</string>
    <string name="dialog_earn_mileage">EarnMileageDialog</string>
    <string name="fragment_authentication">AuthenticationFragment</string>
    <string name="fragment_register_store">RegisterStoreFragment</string>
    <string name="menu_home">홈</string>
    <string name="menu_order">전체 주문</string>
    <string name="menu_preorder">예약 주문</string>
    <string name="menu_stock">재고 확인</string>
    <string name="menu_recipe">레시피 관리</string>
    <string name="menu_worker">근무자변경</string>
    <string name="menu_sales">영업관리</string>
    <string name="menu_setting">환경설정</string>
    <string name="key_pad_1">1</string>
    <string name="key_pad_2">2</string>
    <string name="key_pad_3">3</string>
    <string name="key_pad_4">4</string>
    <string name="key_pad_5">5</string>
    <string name="key_pad_6">6</string>
    <string name="key_pad_7">7</string>
    <string name="key_pad_8">8</string>
    <string name="key_pad_9">9</string>
    <string name="key_pad_0">0</string>
    <string name="key_pad_clear">지우기</string>
    <string name="key_pad_enter">완료</string>
    <string name="menu_home_des">menu for home</string>
    <string name="menu_order_des">menu for order</string>
    <string name="menu_preorder_des">menu for booking</string>
    <string name="menu_stock_des">menu for stock</string>
    <string name="menu_recipe_des">menu for recipe</string>
    <string name="menu_worker_des">menu for managing worker</string>
    <string name="menu_sales_des">menu for sales</string>
    <string name="menu_setting_des">menu for setting</string>
    <string name="category_tab_layout_des">tab layout for category</string>
    <string name="close_dialog">close dialog</string>
    <string name="edt_menu_custom_option">상세옵션 입력 시 작성</string>
    <string name="edt_register_menu_name">메뉴 이름을 입력해주세요.</string>
    <string name="edt_register_stock_name">ex) 원두</string>
    <string name="edt_register_menu_price">ex) 6,000</string>
    <string name="edt_category_name">카테고리 이름을 입력해주세요.</string>
    <string name="sv_search_stock">재료 검색</string>
    <string name="tv_filtering_start">%s</string>
    <string name="tv_filtering_end">- %s</string>
    <string name="tv_custom_price_text">%s원</string>
    <string name="tv_custom_total_count_text">총 %s개 금액</string>
    <string name="tv_mileage_text">%s점</string>
    <string name="tv_customer_number">%s 님</string>
    <string name="tv_visit_time">%d번째 방문</string>
    <string name="tv_menu_option_type_with_price">%s(+%d원)</string>
    <string name="tv_menu_option_type_with_no_price">%s</string>
    <string name="tv_use_all_mileage">사용가능 포인트 전체 사용(%s점)</string>
    <string name="btn_plus_menu_item">+</string>
    <string name="btn_minus_menu_item">-</string>
    <string name="btn_delete_selected_menu_item">x</string>
    <string name="cafe_pos">CAFEPOS</string>
    <string name="tv_order_des">주문 내역</string>
    <string name="tv_cancel_all"><u>내역 전체취소</u></string>
    <string name="btn_order">주문하기</string>
    <string name="btn_preorder">예약 주문</string>
    <string name="tv_sales_target">오늘 목표매출 달성율</string>
    <string name="btn_change_selected_options">옵션변경</string>
    <string name="tv_earn_mileage_des">포인트 적립</string>
    <string name="phone_number_header">010</string>
    <string name="phone_number_divider">-</string>
    <string name="pass_earn_mileage">적립 안함</string>
    <string name="tv_modify_order"><u>주문 수정</u></string>
    <string name="tv_customer_info_des">회원 정보</string>
    <string name="tv_last_visit_date_des">마지막 방문</string>
    <string name="tv_earned_mileage_des">적립 예상 포인트</string>
    <string name="tv_mileage_des">포인트 현황</string>
    <string name="tv_cur_mileage_des">사용 가능한 포인트</string>
    <string name="tv_use_mileage_des">오늘 사용 포인트</string>
    <string name="tv_payment_des">결제 내역</string>
    <string name="tv_total_price_des">총 금액</string>
    <string name="tv_total_mileage_use_des">포인트 결제</string>
    <string name="tv_total_pay_price_des">결제 금액</string>
    <string name="btn_pay_by_cash">현금/계좌이체</string>
    <string name="btn_pay_by_easy">간편 결제(카카오페이)</string>
    <string name="btn_pay_by_card">신용카드 결제</string>
    <string name="tv_menu_option_picker_des">옵션 추가</string>
    <string name="tv_menu_custom_option_des">상세옵션</string>
    <string name="btn_menu_option_add">메뉴 추가</string>
    <string name="btn_use_mileage">선결제/포인트 사용</string>
    <string name="btn_not_use">사용 안 함</string>
    <string name="tv_use_mileage_dl_des">포인트 사용</string>
    <string name="btn_register_new_customer">마일리지 등록</string>
    <string name="tv_search_result_des">검색결과</string>
    <string name="tv_receipt_des">영수증</string>
    <string name="tv_mileage_use_des">포인트 사용</string>
    <string name="tv_mileage_earn_des">포인트 적립</string>
    <string name="tv_pay_method_des">결제수단</string>
    <string name="tv_pay_total_price_des">총 결제금액</string>
    <string name="btn_pay_cancel">결제 취소</string>
    <string name="tv_week_mon">월</string>
    <string name="tv_week_tue">화</string>
    <string name="tv_week_wed">수</string>
    <string name="tv_week_thur">목</string>
    <string name="tv_week_fri">금</string>
    <string name="tv_week_sat">토</string>
    <string name="tv_week_sun">일</string>
    <string name="tv_bill_filtering_des">기간별 검색</string>
    <string name="btn_bill_filtering_search">적용</string>
    <string name="btn_confirm">예</string>
    <string name="btn_cancel_delete">아니오</string>
    <string name="tv_no_filtering">전체</string>
    <string name="tv_preorder_input_user_info">고객 정보</string>
    <string name="tv_preorder_request_des">요청사항</string>
    <string name="tv_preorder_request_hint">ex) 얼음 많이 주세요.</string>
    <string name="btn_preorder_process">예약 진행</string>
    <string name="tv_date_time_picker_des">예약 날짜</string>
    <string name="tv_preorder_list_des">예약 주문 리스트</string>
    <string name="tv_today_valid_preorder_list_des">예약된 주문</string>
    <string name="tv_today_past_preorder_list_des">완료된 주문</string>
    <string name="tv_preorder_bill_des">예약 내역</string>
    <string name="tv_user_phone_number_des">연락처</string>
    <string name="tv_preorder_customer_info_des">고객 정보</string>
    <string name="btn_preorder_modify_menu">주문 수정하기</string>
    <string name="btn_pay_preorder">주문 결제하기</string>
    <string name="btn_preorder_cancel_all"><u>주문 취소</u></string>
    <string name="tv_customer_request_exist">요청사항 있음</string>
    <string name="tv_customer_request_not_exist">요청사항 없음</string>
    <string name="tv_save_modification">주문 저장</string>
    <string name="tv_preorder_register_des">예약 주문 등록</string>
    <string name="tv_preorder_modify_des">예약 주문 수정</string>
    <string name="tv_preorder_info_des">수령 정보</string>
    <string name="tv_preorder_date_des">예약 날짜</string>
    <string name="tv_preorder_time_des">수령 시간</string>
    <string name="tv_preorder_method_des">수령 방법</string>
    <string name="tv_preorder_pick_up">직접 방문</string>
    <string name="tv_preorder_pay_info_des">결제 정보</string>
    <string name="tv_preorder_pay_method_des">결제 방식</string>
    <string name="tv_preorder_pay_pick_up">픽업 시 결제</string>
    <string name="tv_preorder_detail_info_des">추가 정보</string>
    <string name="tv_preorder_detail_des">요청 사항</string>
    <string name="tv_preorder_detail_hint">ex) 얼음 많이 주세요.</string>
    <string name="tv_hour_for_picker">시</string>
    <string name="tv_minute_for_picker">분</string>
    <string name="tv_modify_category_name"><u>카테고리 수정</u></string>
    <string name="tv_register_menu">메뉴 추가</string>
    <string name="tv_register_stock">재고 추가</string>
    <string name="chip_manufactured_menu">제조 메뉴</string>
    <string name="chip_none_manufactured_menu">비제조 메뉴</string>
    <string name="tv_recipe_name_des">품목</string>
    <string name="tv_recipe_amount_des">수량</string>
    <string name="tv_recipe_unit_des">단위</string>
    <string name="btn_modify_menu">레시피 수정</string>
    <string name="btn_modify_stock">재고 수정</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_delete_menu">메뉴 삭제</string>
    <string name="btn_delete_stock">재고 삭제</string>
    <string name="btn_modify_options">옵션 설정</string>
    <string name="btn_register_menu">메뉴 등록</string>
    <string name="btn_register_stock">재고 등록</string>
    <string name="tv_no_menu_recipe_des">레시피를 추가해주세요!</string>
    <string name="tv_no_menu_cost_history">메뉴 원가 변동이 없습니다!</string>
    <string name="tv_no_stock_cost_history">재고 원가 변동이 없습니다!</string>
    <string name="tv_no_menu_option_des">옵션을 추가해주세요!</string>
    <string name="tv_no_menu_des">메뉴를 등록해주세요!</string>
    <string name="tv_no_stock_des">재고를 등록해주세요!</string>
    <string name="tv_no_using_menu_des">해당 재고를 사용하는 메뉴가 없습니다!</string>
    <string name="tv_price_unit">원</string>
    <string name="tv_register_recipe_des">레시피 설정</string>
    <string name="tv_stock_setting_des">재고 설정</string>
    <string name="tv_register_option_des">옵션 설정</string>
    <string name="tv_menu_cost_des">메뉴 원가 추이</string>
    <string name="tv_stock_cost_des">재고 원가 추이</string>
    <string name="tv_category_no_item">메뉴를 등록해주세요!</string>
    <string name="tv_category_modify">수정</string>
    <string name="tv_category_delete">삭제</string>
    <string name="tv_add_category_des">카테고리 생성</string>
    <string name="tv_preorder_customer">%s님의 주문</string>
    <string name="tv_order_total_count">총 %d건</string>
    <string name="tv_new_menu_item">새로운 메뉴</string>
    <string name="tv_no_category_des">\'레시피 관리\'에서 새로운 카테고리와 메뉴를 추가해보세요!</string>
    <string name="tv_ready_for_service">서비스 준비 중 입니다!</string>
    <string name="tv_item_add_new">+ 재고 추가</string>
    <string name="chip_stock_all">재고 전체</string>
    <string name="chip_stock_lack_or_empty">부족/없음</string>
    <string name="chip_stock_unknown">재고 조사 X</string>
    <string name="tv_current_stock_amount">현재 재고수</string>
    <string name="tv_stock_amount_per_des">한 개당 재고량</string>
    <string name="tv_stock_price_per_des">한 개당 가격</string>
    <string name="tv_stock_notification_reference_amount">알림 기준량</string>
    <string name="tv_weekly_usage">최근 1주 사용량</string>
    <string name="tv_inventory_date_des">최근 재고\n조사일</string>
    <string name="tv_menu_related_stock_des">관련 메뉴</string>
    <string name="tv_stock_cost_setting_des">원가 설정</string>
    <string name="tv_confirm_preorder_delete_text">해당 <b>예약 주문</b>을 삭제하시겠습니까?</string>
    <string name="tv_confirm_stock_delete_text">해당 <b>재고</b>를 삭제하시겠습니까?</string>
    <string name="tv_confirm_menu_delete_text">해당 <b>메뉴</b>를 삭제하시겠습니까?</string>
    <string name="tv_confirm_bill_cancel_text">해당 <b>결제 내역</b>을 취소하시겠습니까?</string>
    <string name="tv_confirm_category_delete_text">카테고리 삭제 시, 포함된 메뉴들도 함께 삭제됩니다!\n해당 <b>카테고리</b>를 삭제하시겠습니까?</string>
    <string name="btn_category_modify_des">수정 완료</string>
    <string name="btn_submit_phone_number">전송</string>
    <string name="btn_submit">제출</string>
    <string name="btn_check_des">확인</string>
    <string name="tv_phone_number_des1">전화번호 입력</string>
    <string name="tv_phone_number_des2">서비스 이용을 위해 전화번호를 입력해주세요!</string>
    <string name="tv_authentication_code_des1">인증번호 입력</string>
    <string name="tv_authentication_code_des2">전송된 인증번호를 입력해주세요!</string>
    <string name="tv_phone_number_helper_txt">ex) 01012341234</string>
    <string name="tv_business_registration_num_hint">ex) 0101234123</string>
    <string name="tv_register_store_des">인증에 성공하셨습니다!</string>
    <string name="tv_business_registration_num_des1">사업자 등록 번호 입력</string>
</resources>