<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tl_custom_keypad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TableRow>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:text="@string/key_pad_1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginEnd="8.48dp"
                    android:layout_marginBottom="8.48dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:text="@string/key_pad_2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginEnd="8.48dp"
                    android:layout_marginBottom="8.48dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:text="@string/key_pad_3"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginBottom="8.48dp"/>

            </TableRow>

            <TableRow>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:text="@string/key_pad_4"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginEnd="8.48dp"
                    android:layout_marginBottom="8.48dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:text="@string/key_pad_5"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginEnd="8.48dp"
                    android:layout_marginBottom="8.48dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:text="@string/key_pad_6"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginBottom="8.48dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:layout_marginEnd="8.48dp"
                    android:layout_marginBottom="8.48dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:gravity="center"
                    android:text="@string/key_pad_7"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:layout_marginEnd="8.48dp"
                    android:layout_marginBottom="8.48dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:gravity="center"
                    android:text="@string/key_pad_8"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:layout_marginBottom="8.48dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:gravity="center"
                    android:text="@string/key_pad_9"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_clear"
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:layout_marginEnd="8.48dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/key_pad_clear"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:layout_marginEnd="8.48dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_gray"
                    android:gravity="center"
                    android:text="@string/key_pad_0"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_enter"
                    android:layout_width="63.64dp"
                    android:layout_height="63.64dp"
                    android:background="@drawable/shape_round_4"
                    android:backgroundTint="@color/key_pad_dark_gray"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/key_pad_enter"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>